Fix the painting of document markers under zoom and variable DPI

The painting of document markers does not take into account zoom
or DPI settings. We do create different sized bitmaps for high DPI,
but we then scale that out to draw always at the same size.

This patch re-writes the document markers sizing code to scale the
marker with zoom (as the text scales) and to otherwise simplify
the code.

New tests for document marker painting are added. They cover various
zoom factors.

R=fmalita@chromium.org
BUG=686792
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2667363004
Cr-Commit-Position: refs/heads/master@{#448414}

Former-commit-id: d3c22e5c574de5ee276228227967029608f4fb3c